--- a/index.html
+++ b/index.html
@@ -7306,7 +7306,7 @@ function initWidgetsSystem(currentUser) {
     } else if (type === 'MiniCPU') {
       renderMiniCPU(body);
     } else if (type === 'Weather') {
-      renderWeather(container);
+      renderWeather(body);
     } else if (type === 'Custom') {
       body.innerHTML = `<iframe style="width:100%;height:120px;border:none;" srcdoc="${content}"></iframe>`;
     }
