--- a/index.html
+++ b/index.html
@@ -8324,7 +8324,7 @@ document.addEventListener("DOMContentLoaded", function() {
       <button id="news-weather-toggle" class="btn-ghost">Weather</button>
     </div>
     <div id="news-bootloader" class="news-bootloader">
-      <div class="boot-logo">Windows 11</div>
+      <div class="boot-logo">Windows 12 News</div>
       <div class="boot-spinner"></div>
       <div class="boot-text">Loading latest articles...</div>
     </div>
